--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 ### Example user template template
 ### Example user template
 
+#VSCODE
+.vscode
+virtual-env
+
 # IntelliJ project files
 .idea
 *.iml
